# cpp_python_image_stream

./: .gitignore  README.md
cpp/: CMakeLists.txt  client.cpp
python/: Camera.py  Sender.py  SocketRecv.py  SocketSend.py  test.py
